platform/addons/backstage/manifests/09-backstage-service.yaml
# Backstage Service
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  labels:
    app: backstage
    app.kubernetes.io/part-of: backstage
spec:
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: http  # Maps to port 7007 in the container
      protocol: TCP
